Working map and caches

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <body>
     <div id="app">
       <!-- todo -->
+      <div id="controlPanel">
+        <button id="north" title="north">⬆️</button>
+        <button id="south" title="south">⬇️</button>
+        <button id="east" title="east">➡️</button>
+        <button id="west" title="west">⬅️</button>
+      </div>
+      <div id = "statusPanel"></div>
+      <div id = "map"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
