--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <button id="south" title="south">⬇️</button>
         <button id="east" title="east">➡️</button>
         <button id="west" title="west">⬅️</button>
+        <button id="reset" title="reset">🚮</button>
+        <button id="sensor" title="sensor">🌐</button>
       </div>
       <div id = "statusPanel"></div>
       <div id = "map"></div>
